--- a/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
+++ b/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
@@ -416,12 +416,24 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tzE-Im-NaN">
-                                <rect key="frame" x="115" y="460" width="90" height="39"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cSa-YS-UWc">
+                                <rect key="frame" x="16" y="469" width="70" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="90" id="XZh-9x-lWp"/>
+                                    <constraint firstAttribute="width" constant="70" id="e4W-KY-Rbb"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <state key="normal" title="Log out">
+                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="tapOnLogOut:" destination="zZW-Pu-TDm" eventType="touchUpInside" id="Lkn-uf-wN9"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tzE-Im-NaN">
+                                <rect key="frame" x="214" y="469" width="90" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="i7R-8M-qKT"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Save"/>
                             </button>
                         </subviews>
@@ -429,10 +441,12 @@
                         <constraints>
                             <constraint firstItem="Mq0-r1-9zg" firstAttribute="top" secondItem="Ar4-1H-MYM" secondAttribute="bottom" constant="20" id="HQC-mZ-xwV"/>
                             <constraint firstItem="Mq0-r1-9zg" firstAttribute="leading" secondItem="0IC-rP-egG" secondAttribute="leadingMargin" id="LBQ-sz-cWL"/>
-                            <constraint firstItem="Az8-7r-maZ" firstAttribute="top" secondItem="tzE-Im-NaN" secondAttribute="bottom" constant="20" id="NpU-Y2-LzP"/>
-                            <constraint firstItem="tzE-Im-NaN" firstAttribute="centerX" secondItem="0IC-rP-egG" secondAttribute="centerX" id="Ojn-nf-yyA"/>
+                            <constraint firstItem="tzE-Im-NaN" firstAttribute="trailing" secondItem="0IC-rP-egG" secondAttribute="trailingMargin" id="ZMz-Ho-vox"/>
                             <constraint firstItem="Ar4-1H-MYM" firstAttribute="centerX" secondItem="0IC-rP-egG" secondAttribute="centerX" id="eZR-SN-36P"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Mq0-r1-9zg" secondAttribute="trailing" id="ed3-gL-oMD"/>
+                            <constraint firstItem="Az8-7r-maZ" firstAttribute="top" secondItem="tzE-Im-NaN" secondAttribute="bottom" constant="20" id="flC-zC-q3Q"/>
+                            <constraint firstItem="Az8-7r-maZ" firstAttribute="top" secondItem="cSa-YS-UWc" secondAttribute="bottom" constant="20" id="g82-We-hAN"/>
+                            <constraint firstItem="cSa-YS-UWc" firstAttribute="leading" secondItem="0IC-rP-egG" secondAttribute="leadingMargin" id="hUh-La-4OT"/>
                             <constraint firstItem="Ar4-1H-MYM" firstAttribute="top" secondItem="1Oa-7o-ebd" secondAttribute="bottom" constant="8" id="pbS-6a-Bvk"/>
                         </constraints>
                     </view>
@@ -440,7 +454,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gMf-kZ-guf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="863" y="2381"/>
+            <point key="canvasLocation" x="862.5" y="2380.9859154929577"/>
         </scene>
         <!--Cleaner Home-->
         <scene sceneID="rMj-2Q-0Vs">
